# toogoodtogo-notifier

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
src/: dynamodb.py  helpers.py  item_to_str.py  items_getter.py
