[tool.poetry]
name = "toogoodtogo-notifier"
version = "0.1.0"
description = ""
authors = ["Daniil Roman <danroman17397@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tgtg = "^0.13.2"
telepot = "^12.7"
decouple = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

